Fix header button alignment

--- a/html/css/ui.css
+++ b/html/css/ui.css
@@ -179,13 +179,13 @@ a {
   display: block;
   width: 48px;
   height: 48px;
-  margin: -10px auto 0;
+  margin: 0 auto;
 }
 
 .uiToolbar .uiButton {
   background: transparent;
   border: none;
-  border-radius: none;
+  border-radius: 0;
   box-shadow: none;
   padding: 5px 5px;
   position: relative;
